create CArd view to show route

--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -23,5 +23,68 @@
             android:id="@+id/recycler_view_routes_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </LinearLayout>>
+    </LinearLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        app:cardCornerRadius="@dimen/loginCardRadius"
+        app:cardElevation="15dp"
+        android:padding="10dp"
+        android:layout_marginHorizontal="20dp"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <com.google.android.material.imageview.ShapeableImageView
+                app:shapeAppearanceOverlay="@style/cornerImageView"
+                android:id="@+id/route_popup_image"
+                android:layout_width="wrap_content"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:layout_margin="10dp"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/default_route_image"/>
+            <TextView
+                android:id="@+id/route_popup_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="RouteName"
+                android:textSize="25sp"
+                android:textStyle="bold"
+                android:layout_below="@+id/route_popup_image"
+                android:layout_centerHorizontal="true"/>
+            <TextView
+                android:id="@+id/route_popup_area"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Area"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="40dp"
+                android:layout_below="@id/route_popup_name"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Difficulty"
+                android:layout_marginStart="40dp"
+                android:layout_below="@id/route_popup_name"
+                />
+            <TextView
+                android:id="@+id/route_popup_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Description"
+                android:layout_marginHorizontal="40dp"
+                android:layout_marginVertical="10dp"
+                android:layout_below="@id/route_popup_area"
+                android:layout_centerHorizontal="true"/>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btn_show_route"
+                android:layout_centerHorizontal="true"
+                android:layout_below="@id/route_popup_description"/>
+        </RelativeLayout>
+
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
