--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -25,6 +25,7 @@
             android:layout_height="match_parent" />
     </LinearLayout>
     <androidx.cardview.widget.CardView
+        android:id="@+id/route_popup_card"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -32,6 +33,7 @@
         app:cardElevation="15dp"
         android:padding="10dp"
         android:layout_marginHorizontal="20dp"
+        android:visibility="gone"
         >
         <RelativeLayout
             android:layout_width="match_parent"
