--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -65,6 +65,7 @@
                 android:layout_marginEnd="40dp"
                 android:layout_below="@id/route_popup_name"/>
             <TextView
+                android:id="@+id/route_popup_difficulty"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Difficulty"
