--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/routes_list_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -82,10 +83,12 @@
                 android:layout_below="@id/route_popup_area"
                 android:layout_centerHorizontal="true"/>
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/route_popup_show_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/btn_show_route"
                 android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dp"
                 android:layout_below="@id/route_popup_description"/>
         </RelativeLayout>
 
