LocationService (pre-testing)

--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -135,15 +135,27 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-                        <fragment
-                            android:id="@+id/map"
-                            android:name="com.google.android.gms.maps.SupportMapFragment"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            tools:context=".view.LoggedInFragment"
-                            tools:layout_editor_absoluteX="-66dp"
-                            tools:layout_editor_absoluteY="-177dp" />
 
+        <fragment
+            android:id="@+id/map"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".view.LoggedInFragment"
+            tools:layout_editor_absoluteX="-66dp"
+            tools:layout_editor_absoluteY="-177dp" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/btn_plus"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="25dp"
+            android:id="@+id/btn_record_route"
+
+
+                />
 
 
 </RelativeLayout>
