--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -145,14 +145,25 @@
             tools:layout_editor_absoluteX="-66dp"
             tools:layout_editor_absoluteY="-177dp" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
+        <RelativeLayout
             android:layout_height="wrap_content"
-            android:src="@android:drawable/btn_plus"
+            android:layout_width="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_margin="25dp"
-            android:id="@+id/btn_record_route"
+            android:layout_marginHorizontal="35dp">
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/btn_record_route"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|end"
+                    app:backgroundTint="@color/white"
+                    android:layout_centerHorizontal="true"
+                    android:src="@drawable/ic_record_button_background"
+                    />
+        </RelativeLayout>
+
+
 
 
                 />
