--- a/app/src/main/res/layout/fragmant_register.xml
+++ b/app/src/main/res/layout/fragmant_register.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,116 +19,122 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/icon_bold"
-        android:id="@+id/iv_banner"
-        />
-
-    <TextView
-        android:id="@+id/tv_banner_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif-black"
-        android:text="@string/banner_description"
-        android:textAlignment="center"
-        android:textSize="18sp"
-        android:textStyle="italic"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_banner" />
-
+        android:layout_marginVertical="10dp"
+        android:src="@drawable/logo_moto_route_new"
+        android:id="@+id/iv_banner" />
     <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_banner_description"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/iv_banner"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginBottom="70dp"
         app:cardCornerRadius="@dimen/loginCardRadius"
-        android:elevation="5dp"
+        android:elevation="16dp"
         android:layout_gravity="center"
         android:backgroundTint="@color/Light_Green_50"
         android:id="@+id/card_signUp">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_margin="10dp"
-            >
-            <EditText
-                android:id="@+id/et_register_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:ems="10"
-                android:hint="@string/hint_login"
-                android:textSize="20sp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                android:imeOptions="actionNext"
-                tools:ignore="MissingConstraints" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_password"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/et_register_email"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_margin="20dp"
-                android:ems="10"
-                android:imeOptions="actionNext"
-                android:inputType="textPassword"
-                android:id="@+id/et_register_password"
-                />
-            <EditText
-                android:id="@+id/et_register_fullName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:ems="10"
-                android:hint="@string/hint_fullName"
-                android:textSize="20sp"
-                android:imeOptions="actionNext"
-                app:layout_constraintTop_toBottomOf="@id/et_register_password"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="10dp">
 
-                tools:ignore="MissingConstraints" />
-
-            <EditText
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_layout_email_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_phoneNumber"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/et_register_fullName"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:imeOptions="actionDone"
-                android:layout_margin="20dp"
-                android:ems="10"
-                android:id="@+id/et_register_phoneNumber"
-                />
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/ic_baseline_email_24"
+                app:helperText="@string/helper_required"
+                app:helperTextTextColor="@color/red"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
 
-            <Button
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_register_email"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:hint="@string/hint_login"
+                    android:imeOptions="actionNext"
+                    android:gravity="center_horizontal"
+                    tools:ignore="MissingConstraints" />
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_layout_password_register"
+                android:layout_below="@id/text_layout_email_register"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/et_register_phoneNumber"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_margin="35dp"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/ic_baseline_password_24"
+                app:helperText="@string/helper_required"
+                app:helperTextTextColor="@color/red"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_password"
+                    android:layout_margin="20dp"
+                    android:gravity="center_horizontal"
+                    android:imeOptions="actionNext"
+                    android:inputType="textPassword"
+                    android:id="@+id/et_register_password"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_layout_fullname_register"
+                android:layout_below="@id/text_layout_password_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/ic_baseline_assignment_ind_24"
+                app:helperTextTextColor="@color/red"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/et_register_fullName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="20dp"
+                    android:ems="10"
+                    android:hint="@string/hint_fullName"
+                    android:gravity="center_horizontal"
+                    android:imeOptions="actionNext"
+                    android:layout_below="@id/text_layout_password_register"
+                    tools:ignore="MissingConstraints" />
+            </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/text_layout_phone_register"
+                android:layout_below="@id/text_layout_fullname_register"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:endIconMode="clear_text"
+                app:startIconDrawable="@drawable/ic_baseline_phone_24"
+                app:helperTextTextColor="@color/red"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+                <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_phoneNumber"
+                    android:imeOptions="actionDone"
+                    android:gravity="center_horizontal"
+                    android:layout_margin="20dp"
+                    android:ems="10"
+                    android:id="@+id/et_register_phoneNumber"
+                    />
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_layout_phone_register"
+                android:layout_marginHorizontal="50dp"
                 android:backgroundTint="@color/Light_Green_700"
                 android:textColor="@color/white"
-                android:textSize="20sp"
                 android:textStyle="bold"
                 style="?attr/materialButtonStyle"
                 android:text="@string/btn_signUp"
                 android:id="@+id/btn_register"
                 />
-        </androidx.constraintlayout.widget.ConstraintLayout>>
-
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
 
@@ -135,16 +142,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_register_signIn"
-            android:layout_alignParentStart="true"
             android:text="@string/signup_login_hint"
             android:textSize="15sp"
+            android:layout_marginBottom="25dp"
             style="bold"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
             android:layout_centerInParent="true"
-            android:layout_marginTop="25dp"
-            app:layout_constraintTop_toBottomOf="@id/card_signUp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-
             />
 
     <ProgressBar
@@ -159,4 +163,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
