--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,77 @@
     android:background="@drawable/background"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        app:layout_constraintTop_toBottomOf="@id/iv_banner"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="@dimen/loginCardRadius"
+        android:elevation="5dp"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/Light_Green_50"
+        android:id="@+id/card_login">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp">
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/text_layout_email_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    app:endIconMode="clear_text"
+                    app:startIconDrawable="@drawable/ic_baseline_email_24"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="20dp"
+                        android:hint="@string/hint_login"
+                        android:imeOptions="actionNext"
+                        android:gravity="center_horizontal"
+                        tools:ignore="MissingConstraints" />
+                </com.google.android.material.textfield.TextInputLayout>
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/text_layout_password_login"
+                    android:layout_below="@id/text_layout_email_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:endIconMode="clear_text"
+                    app:startIconDrawable="@drawable/ic_baseline_password_24"
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_password"
+                        android:layout_margin="20dp"
+                        android:gravity="center_horizontal"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:id="@+id/et_password"
+                        />
+                </com.google.android.material.textfield.TextInputLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_layout_password_login"
+                android:layout_margin="35dp"
+                android:backgroundTint="@color/Light_Green_700"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                style="?attr/materialButtonStyle"
+                android:text="@string/btn_login"
+                android:id="@+id/btn_login"
+                />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,88 +89,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginTop="10dp"
-        android:src="@drawable/icon_bold"
+        android:src="@drawable/logo_moto_route_new"
         android:id="@+id/iv_banner"
         />
 
-    <TextView
-        android:id="@+id/tv_banner_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:fontFamily="sans-serif-black"
-        android:text="@string/banner_description"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:textStyle="italic"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_banner" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/tv_banner_description"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="20dp"
-        app:cardCornerRadius="@dimen/loginCardRadius"
-        android:elevation="5dp"
-        android:layout_gravity="center"
-        android:backgroundTint="@color/Light_Green_50"
-        android:id="@+id/card_login">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_margin="10dp"
-            >
-            <EditText
-                android:id="@+id/et_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="20dp"
-                android:ems="10"
-                android:hint="@string/hint_login"
-                android:textSize="20sp"
-                android:imeOptions="actionNext"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-
-                tools:ignore="MissingConstraints" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/hint_password"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@id/et_email"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_margin="20dp"
-                android:ems="10"
-                android:inputType="textPassword"
-                android:id="@+id/et_password"
-                />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/et_password"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_margin="35dp"
-                android:backgroundTint="@color/Light_Green_700"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                style="?attr/materialButtonStyle"
-                android:text="@string/btn_login"
-                android:id="@+id/btn_login"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>>
-
-    </androidx.cardview.widget.CardView>
 
     <RelativeLayout
         android:layout_width="match_parent"
