--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -22,6 +22,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="10dp">
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/text_layout_email_login"
@@ -65,7 +66,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_layout_password_login"
-                android:layout_margin="35dp"
+                android:layout_marginHorizontal="35dp"
+                android:layout_marginVertical="15dp"
                 android:backgroundTint="@color/Light_Green_700"
                 android:textColor="@color/white"
                 android:textSize="20sp"
