--- a/app/src/main/res/layout/fragment_routes_list.xml
+++ b/app/src/main/res/layout/fragment_routes_list.xml
@@ -19,12 +19,22 @@
     <LinearLayout android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:id="@+id/recycler_view_routes_list_layout"
         android:layout_below="@id/iv_routes_lists_header">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view_routes_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
+    <ProgressBar
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/iv_routes_lists_header"
+        android:layout_centerInParent="true"
+        android:layout_marginVertical="30dp"
+        android:visibility="gone"
+        android:id="@+id/route_popup_progressbar"
+        />
     <androidx.cardview.widget.CardView
         android:id="@+id/route_popup_card"
         android:layout_width="wrap_content"
