--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -39,8 +39,10 @@
                         android:layout_height="wrap_content"
                         android:layout_margin="20dp"
                         android:hint="@string/hint_login"
-                        android:imeOptions="actionNext"
                         android:gravity="center_horizontal"
+                        android:imeOptions="actionNext"
+                        android:maxLines="1"
+                        android:inputType="text"
                         tools:ignore="MissingConstraints" />
                 </com.google.android.material.textfield.TextInputLayout>
                 <com.google.android.material.textfield.TextInputLayout
@@ -57,7 +59,7 @@
                         android:hint="@string/hint_password"
                         android:layout_margin="20dp"
                         android:gravity="center_horizontal"
-                        android:imeOptions="actionNext"
+                        android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:id="@+id/et_password"
                         />
