--- a/app/src/main/res/layout/fragment_logged_in.xml
+++ b/app/src/main/res/layout/fragment_logged_in.xml
@@ -4,6 +4,158 @@
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/card_emergency"
+            android:layout_centerInParent="true"
+            android:paddingTop="30dp"
+            android:layout_margin="30dp"
+            app:cardCornerRadius="@dimen/loginCardRadius"
+            android:elevation="5dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/Light_Green_50"
+            android:visibility="visible">
+
+                <LinearLayout android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:weightSum="12"
+                    android:layout_margin="10dp"
+                    android:orientation="vertical">
+                        <TextView android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="10dp"
+                            android:text="@string/emergency_title"
+                            android:textStyle="bold"
+                            android:textSize="20sp"
+                            android:textColor="@color/Light_Green_900"/>
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_marginVertical="10dp"
+                            android:layout_weight="1">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:weightSum="9"
+                                    android:gravity="start|center"
+                                    android:layout_marginHorizontal="5dp"
+                                    android:orientation="horizontal">
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="2"
+                                            android:padding="5dp"
+                                            android:textStyle="bold"
+                                            android:text="@string/emergency_name1"/>
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="4"
+                                            android:padding="5dp"
+                                            android:text="@string/emergency_details1"/>
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="2"
+                                            android:padding="5dp"
+                                            android:gravity="center"
+                                            android:text="@string/emergency_phone1"/>
+                                </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_marginVertical="10dp"
+                            android:layout_weight="1">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:weightSum="9"
+                                    android:layout_marginHorizontal="5dp"
+                                    android:orientation="horizontal">
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="2"
+                                            android:padding="5dp"
+                                            android:textStyle="bold"
+                                            android:text="@string/emergency_name2"
+                                            />
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="4"
+                                            android:padding="5dp"
+                                            android:text="@string/emergency_details2"/>
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="2"
+                                            android:padding="5dp"
+                                            android:gravity="center"
+                                            android:text="@string/emergency_phone2"/>
+                                </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_marginVertical="10dp"
+                            android:layout_weight="1">
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:weightSum="9"
+                                    android:layout_marginHorizontal="5dp"
+                                    android:orientation="horizontal">
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="2"
+                                            android:padding="5dp"
+                                            android:textStyle="bold"
+                                            android:text="@string/emergency_name2"
+                                            />
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="4"
+                                            android:padding="5dp"
+                                            android:text="@string/emergency_details2"/>
+                                        <TextView
+                                            android:layout_width="0dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="2"
+                                            android:padding="5dp"
+                                            android:gravity="center"
+                                            android:text="@string/emergency_phone2"/>
+                                </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                        <TextView android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginVertical="10dp"
+                            android:text="@string/my_location"
+                            android:textStyle="bold"
+                            android:textSize="20sp"
+                            android:textColor="@color/Light_Green_900"/>
+                        <TextView android:layout_height="wrap_content"
+                            android:id="@+id/my_gps_location"
+                            android:layout_width="wrap_content"
+                            android:layout_gravity="center"
+                            android:text="Lat / lng"
+                            android:textStyle="bold"
+                            android:textSize="15sp"
+                            android:textColor="@color/Light_Green_700"/>
+
+                </LinearLayout>
+
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
