--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red">#E53935</color>
+    <color name="red">#FB8C00</color>
 
     <color name="Light_Green_50">#F1F8E9</color>
     <color name="Light_Green_200">#C5E1A5</color>
