--- a/app/src/main/res/layout/fragmant_register.xml
+++ b/app/src/main/res/layout/fragmant_register.xml
@@ -102,7 +102,7 @@
                     android:gravity="center_horizontal"
                     android:imeOptions="actionNext"
                     android:maxLines="1"
-                    android:inputType="text"
+                    android:inputType="textCapWords"
                     android:layout_below="@id/text_layout_password_register"
                     tools:ignore="MissingConstraints" />
             </com.google.android.material.textfield.TextInputLayout>
